--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Users/gabri/Desktop/Projeto CARLOS/.pio/build/esp32dev/firmware.elf",
+            "executable": "c:/Users/gabri/Documents/Projeto Carlos/.pio/build/esp32dev/firmware.elf",
+            "projectEnvName": "esp32dev",
             "toolchainBinDir": "C:/Users/gabri/.platformio/packages/toolchain-xtensa32/bin",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -24,7 +25,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Users/gabri/Desktop/Projeto CARLOS/.pio/build/esp32dev/firmware.elf",
+            "executable": "c:/Users/gabri/Documents/Projeto Carlos/.pio/build/esp32dev/firmware.elf",
+            "projectEnvName": "esp32dev",
             "toolchainBinDir": "C:/Users/gabri/.platformio/packages/toolchain-xtensa32/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
